--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
-    "gulp-postcss": "^6.2.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
+    "handlebars": "^4.0.6",
     "postcss-assets": "^4.1.0",
     "postcss-short": "^2.0.1"
   },
