--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
-    "handlebars": "^4.0.6",
     "postcss-assets": "^4.1.0",
     "postcss-short": "^2.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-compile-handlebars": "^0.6.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
