--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-compile-handlebars": "^0.6.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf build",
+    "start": "npm run clean && gulp"
   },
   "author": "AnnaKuznetsova",
   "license": "ISC"
