--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "postcss-short": "^2.0.1"
   },
   "devDependencies": {
-    "gulp-compile-handlebars": "^0.6.1"
+    "gulp-compile-handlebars": "^0.6.1",
+    "gulp-postcss": "^6.3.0",
+    "postcss-reporter": "^3.0.0",
+    "stylelint": "^7.8.0",
+    "stylelint-config-standard": "^16.0.0"
   },
   "scripts": {
     "clean": "rm -rf build",
-    "start": "npm run clean && gulp"
+    "start": "npm run clean && gulp",
+    "stylelint": "stylelint src/styles/*css || true"
   },
   "author": "AnnaKuznetsova",
   "license": "ISC"
