--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-postcss": "^6.3.0",
+    "gulp-stylelint": "^3.9.0",
     "postcss-reporter": "^3.0.0",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0"
