--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
     "gulp-postcss": "^6.3.0",
     "gulp-stylelint": "^3.9.0",
     "postcss-reporter": "^3.0.0",
+    "pre-commit": "^1.2.2",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0"
   },
   "scripts": {
     "clean": "rm -rf build",
-    "start": "npm run clean && gulp",
+    "start": "npm run clean && gulp && npm run stylelint",
     "stylelint": "stylelint src/styles/*css || true"
   },
+
+  "pre-cpommit": [
+    "stylelint"
+  ],
+
   "author": "AnnaKuznetsova",
   "license": "ISC"
 }
