--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "---",
   "main": "gulpfile.js",
+  "scripts": {
+    "clean": "rm -rf build",
+    "start": "npm run clean && gulp && npm run stylelint",
+    "stylelint": "stylelint src/styles/*css || false"
+  },
   "dependencies": {
     "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
@@ -24,12 +29,7 @@
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0"
   },
-  "scripts": {
-    "clean": "rm -rf build",
-    "start": "npm run clean && gulp && npm run stylelint",
-    "stylelint": "stylelint src/styles/*css || true"
-  },
-
+  
   "pre-commit": [
     "stylelint"
   ],
