--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "clean": "rm -rf build",
     "start": "npm run clean && gulp && npm run stylelint",
-    "stylelint": "stylelint src/styles/*css || false"
+    "stylelint": "stylelint src/styles/*css || false",
+    "commitmsg": "validate-commit-msg"
+  },
+  "config": {
+    "validate-commit-msg": {
+      "maxSubjectLength": 50,
+      "types": "conventional-commit-types"
+    }
   },
   "dependencies": {
     "browser-sync": "^2.18.6",
@@ -24,16 +31,16 @@
     "gulp-compile-handlebars": "^0.6.1",
     "gulp-postcss": "^6.3.0",
     "gulp-stylelint": "^3.9.0",
+    "husky": "^0.13.2",
     "postcss-reporter": "^3.0.0",
     "pre-commit": "^1.2.2",
     "stylelint": "^7.8.0",
-    "stylelint-config-standard": "^16.0.0"
+    "stylelint-config-standard": "^16.0.0",
+    "validate-commit-msg": "^2.11.2"
   },
-  
   "pre-commit": [
     "stylelint"
   ],
-
   "author": "AnnaKuznetsova",
   "license": "ISC"
 }
