--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "clean": "rm -rf build",
     "start": "npm run clean && gulp && npm run stylelint",
     "stylelint": "stylelint src/styles/*css || false",
-    "commitmsg": "validate-commit-msg"
+    "commitmsg": "validate-commit-msg" 
+
   },
-  "config": {
+
+   "config": {
     "validate-commit-msg": {
       "maxSubjectLength": 50,
-      "types": "conventional-commit-types"
+      "types": "conventional-commit-types",
+      "subjectPatternErrorMsg": "subject does not match subject pattern!"
     }
   },
+
   "dependencies": {
     "browser-sync": "^2.18.6",
     "gulp": "^3.9.1",
